# 24-point-game

./: README.md
game_1.0version/: CMakeLists.txt  SliderButton.cpp  SliderButton.h  btn_style1.qss  dark_mode.qss  detect24.cpp  detect24.h  equation.cpp  equation.h  generate24.cpp  generate24.h  helpwindow.cpp  helpwindow.h  helpwindow.ui  light_mode.qss  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  settingwindow.cpp  settingwindow.h  settingwindow.ui  timer.h
